--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
-    <title>ES Portfolio</title>
+    <title>Entre Portfolio</title>
     <meta name="title" content="ES Portfolio" />
     <meta
       name="description"
-      content="Eduard Stroescu's personal web developer portfolio."
+      content="D Hudson's personal web developer portfolio."
     />
-    <meta name="author" content="Eduard Stroescu" />
+    <meta name="author" content="Donmenico Hudson" />
 
     <!-- Google Verification -->
     <meta
@@ -26,7 +26,7 @@
     <meta property="og:title" content="ES Portfolio" />
     <meta
       property="og:description"
-      content="Eduard Stroescu's personal web developer portfolio."
+      content="D Hudson's personal web developer portfolio."
     />
     <meta
       property="og:image"
@@ -39,7 +39,7 @@
     <meta property="twitter:title" content="ES Portfolio" />
     <meta
       property="twitter:description"
-      content="Eduard Stroescu's personal web developer portfolio."
+      content="D Hudson's personal web developer portfolio."
     />
     <meta
       property="twitter:image"
