--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
     <title>Entre Portfolio</title>
-    <meta name="title" content="ES Portfolio" />
+    <meta name="title" content="Entre Portfolio" />
     <meta
       name="description"
       content="D Hudson's personal web developer portfolio."
